feat: implement approval-driven requisition workflow with audit history